--- a/app/src/main/res/layout/connexion_fragment.xml
+++ b/app/src/main/res/layout/connexion_fragment.xml
@@ -19,7 +19,7 @@
             style="@style/SubTitle"
             android:text="@string/ServerConnexion" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -28,7 +28,6 @@
                 android:id="@+id/ServerIPAdressTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
                 android:text="@string/ServerAdress"
@@ -37,20 +36,21 @@
             <EditText
                 android:id="@+id/IPAdressServer"
                 style="@style/EditTextStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/ServerIPAdressTextView"
                 android:digits="0123456789."
                 android:hint="@string/IPAddressFormat"
                 android:inputType="number"
-                android:theme="@style/EditTextStyle" />
+                android:maxLines="1"
+                android:maxLength="15"
+                android:theme="@style/EditTextStyle"
+                android:layout_weight="1"
+                />
 
             <Button
                 android:id="@+id/LoginServerButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/login" />
 
@@ -58,13 +58,11 @@
                 android:id="@+id/SaveServerAdressButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@id/LoginServerButton"
                 android:background="@drawable/save"
                 android:textAllCaps="false" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <Button
             android:id="@+id/AutomaticConnexionButton"
