--- a/app/src/main/res/layout/speech_fragment.xml
+++ b/app/src/main/res/layout/speech_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView android:layout_height="match_parent"
+    android:id="@+id/SpeechView"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
@@ -12,7 +13,7 @@
             style="@style/Title"
             android:text="@string/Speech" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -20,18 +21,18 @@
             <EditText
                 android:id="@+id/Speech"
                 style="@style/EditTextStyle"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/ServerIPAdressTextView"
                 android:hint="@string/TypeYourSpeech"
-                android:theme="@style/EditTextStyle" />
+                android:theme="@style/EditTextStyle"
+                android:inputType="textMultiLine"
+                android:layout_weight="1"
+                />
 
             <Button
                 android:id="@+id/SpeakButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/speak" />
 
@@ -39,13 +40,11 @@
                 android:id="@+id/SaveSpeechButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@id/SpeakButton"
                 android:background="@drawable/save"
                 android:textAllCaps="false" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <include layout="@layout/divider"></include>
 
@@ -93,6 +92,7 @@
             />
 
         <SeekBar
+            android:id="@+id/VolumeSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:thumbTint="@color/Primary"
@@ -106,9 +106,20 @@
             />
 
         <Spinner
+            android:id="@+id/LangageSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@android:style/Theme.Holo.Light"></Spinner>
+
+        <CheckBox
+            android:id="@+id/AnimatedSpeech"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/AnimatedSpeech"
+            style="@style/NormalText"
+            android:buttonTint="@color/Primary"
+            android:layout_gravity="center"
+            android:shadowColor="@color/Primary"/>
 
 
     </LinearLayout>
