--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,7 @@
             <item name="android:layout_height">wrap_content</item>
             <item name="android:editTextPreferenceStyle">@color/Transparent</item>
             <item name="colorControlNormal">@color/Transparent</item>
+            <item name="android:textCursorDrawable">@color/Primary</item>
             <item name="android:colorControlActivated">@color/Transparent</item>
             <item name="android:textColorHighlight">@color/Transparent</item>
         </style>
