--- a/app/src/main/res/layout/status_fragment.xml
+++ b/app/src/main/res/layout/status_fragment.xml
@@ -14,8 +14,17 @@
             android:id="@+id/nameEditText"
             style="@style/NormalText"
             android:text="@string/Name"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/BatteryIcon"
+            android:text="0%"
+            android:layout_centerVertical="true"
+            style="@style/NormalText"
+            android:id="@+id/BatteryLevelTextView"/>
 
         <ImageView
+            android:id="@+id/BatteryIcon"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
