--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#1d91c7</color>
     <color name="colorAccent">#FF4081</color>
     <color name="Primary">#1d91c7</color>
-    <color name="Secondary">#c28427</color>
+    <color name="Secondary">#c6c6c6</color>
     <color name="White">#FFFFFF</color>
     <color name="Transparent">#00ffffff</color>
     <color name="TransparentBlue">#881d91c7</color>
