--- a/app/src/main/res/layout/connexion_fragment.xml
+++ b/app/src/main/res/layout/connexion_fragment.xml
@@ -11,11 +11,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/ConnexionFragmentTitle"
-            style="@style/Title"
-            android:text="@string/ServerSettings" />
-
-        <TextView
             style="@style/SubTitle"
             android:text="@string/ServerConnexion" />
 
@@ -31,7 +26,7 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
                 android:text="@string/ServerAdress"
-                android:textSize="18dp" />
+                android:textSize="14sp" />
 
             <EditText
                 android:id="@+id/IPAdressServer"
@@ -52,7 +47,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/save"
+                android:background="@drawable/save_state"
                 android:textAllCaps="false" />
 
             <Button
@@ -60,10 +55,18 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/login" />
+                android:background="@drawable/login_state" />
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/WaitConnexionSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:indeterminateDrawable="@drawable/loading"
+            android:visibility="gone"/>
         <Button
             android:id="@+id/AutomaticConnexionButton"
             style="@style/Element"
@@ -91,14 +94,14 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/trash" />
+                android:background="@drawable/trash_state" />
 
             <Button
                 android:id="@+id/LoginServerButton2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/login" />
+                android:background="@drawable/login_state" />
         </LinearLayout>
 
         <include layout="@layout/divider"/>
@@ -113,8 +116,7 @@
             android:layout_height="wrap_content"
             android:text="@string/Disconected"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/Text"
-            android:textSize="18dp"/>
+            style="@style/NormalText"/>
 
         <Button
             android:id="@+id/ConnexionStatusButton"
