--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,13 @@
             <item name="colorPrimary">@color/colorPrimary</item>
             <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
             <item name="colorAccent">@color/colorAccent</item>
+            <item name="windowNoTitle">true</item>
         </style>
 
         <style name="Element">
             <item name="android:background">@drawable/buttons_state</item>
             <item name="android:textColor">@color/White</item>
-            <item name="android:textSize">18dp</item>
+            <item name="android:textSize">14sp</item>
         </style>
 
         <style name="Title" parent="Element">
@@ -43,6 +44,11 @@
             <item name="android:textCursorDrawable">@color/Primary</item>
             <item name="android:colorControlActivated">@color/Transparent</item>
             <item name="android:textColorHighlight">@color/Transparent</item>
+            <item name="android:textSize">14sp</item>
+        </style>
+
+        <style name="ProgressBar" parent="ThemeOverlay.AppCompat.Light">
+            <item name="android:colorAccent">@color/Primary</item>
         </style>
 
         <style name="Theme.AppTheme.Light.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar" >
@@ -59,12 +65,30 @@
             <item name="android:layout_height">wrap_content</item>
             <item name="android:layout_margin">10dp</item>
             <item name="android:textColor">@color/Primary</item>
-            <item name="android:textSize">18dp</item>
+            <item name="android:textSize">14sp</item>
         </style>
 
         <style name="NormalText" parent="SubTitle">
             <item name="android:textColor">@color/Text</item>
         </style>
 
+        <style name="BarTheme" parent="Widget.Design.TabLayout">
+            <!--   your app branding color for the app bar -->
+            <item name="colorPrimary">@color/Primary</item>
+            <!--   darker variant for the status bar and contextual app bars -->
+            <item name="colorPrimaryDark">#303F9F</item>
+            <!--   theme UI controls like checkboxes and text fields -->
+            <item name="colorAccent">@color/White</item>
+            <item name="android:textAppearance">@style/TabText</item>
+            <item name="tabSelectedTextColor">@color/White</item>
+        </style>
+
+        <style name="TabText" parent="TextAppearance.Design.Tab">
+            <item name="android:textSize">10sp</item>
+        </style>
+
+        <style name="Spinner" parent="@android:style/Theme.Holo.Light">
+            <item name="android:textSize">14sp</item>
+        </style>
     </resources>
 
