--- a/app/src/main/res/layout/connexion_fragment.xml
+++ b/app/src/main/res/layout/connexion_fragment.xml
@@ -87,7 +87,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:theme="@android:style/Theme.Holo.Light"></Spinner>
+                android:theme="@android:style/Theme.Holo.Light"
+                android:layout_margin="10dp"/>
 
             <Button
                 android:id="@+id/RemoveServerAdressButton"
