--- a/app/src/main/res/layout/move_fragment.xml
+++ b/app/src/main/res/layout/move_fragment.xml
@@ -18,7 +18,8 @@
             android:id="@+id/PostureSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@android:style/Theme.Holo.Light"></Spinner>
+            android:theme="@android:style/Theme.Holo.Light"
+            android:layout_margin="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,7 +58,8 @@
             android:id="@+id/BehaviorSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@android:style/Theme.Holo.Light"></Spinner>
+            android:theme="@android:style/Theme.Holo.Light"
+            android:layout_margin="10dp"/>
 
         <Button
             android:id="@+id/SetBehaviorButton"
@@ -67,7 +69,7 @@
             android:layout_margin="10dp"
             android:text="@string/SetBehavior"/>
 
-        <include layout="@layout/divider"></include>
+        <include layout="@layout/divider"/>
 
         <TextView
             android:layout_width="match_parent"
