--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,10 @@
             <!-- Customize your theme here. -->
             <item name="colorPrimary">@color/colorPrimary</item>
             <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-            <item name="colorAccent">@color/colorAccent</item>
+            <item name="colorAccent">@color/Primary</item>
             <item name="windowNoTitle">true</item>
+            <item name="windowActionBar">false</item>
+            <item name="android:statusBarColor">@color/NotificationBar</item>
         </style>
 
         <style name="Element">
