--- a/app/src/main/res/layout/walk_fragment.xml
+++ b/app/src/main/res/layout/walk_fragment.xml
@@ -4,4 +4,17 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="328dp"
+            android:layout_height="328dp"
+            android:background="@color/Text"/>
+
+    </LinearLayout>
+
+
     </ScrollView>
